--- a/styles.css
+++ b/styles.css
@@ -11,10 +11,25 @@ img {
 #container {
   display: flex;
 }
+
 #info-div {
   width: 65%;
   margin-right: 20px;
 }
 #img-div {
   width: 35%;
+}
+
+@media (max-width: 659px) {
+  #container {
+    flex-direction: column;
+  }
+  #info-div {
+    width: 100%;
+    order: 2;
+  }
+  #img-div {
+    width: 100%;
+    order: 1;
+  }
 }
